# lab_09_producer_consumer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/_3rdParty/Hunter/: install-root-dir
_build/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
downloads/pages/: file_1.html  file_2.html  page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_3.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
include/: directory_manager.hpp  html_parser.hpp  producer_consumer.hpp  root_certificates.hpp  safe_deque.hpp  safe_queue.hpp  task.hpp  webcrawler.hpp
scripts/: checks.sh  clear.sh  coverage.sh  duplication.sh  genenv.sh  tests.sh
sources/: source.cpp
tests/: test.cpp
